--- a/test/configuration.yaml
+++ b/test/configuration.yaml
@@ -8,4 +8,4 @@ lovelace:
     lovelace-yaml:
       mode: yaml
       title: yaml
-      filename: lovelace.yaml
+      filename: test/lovelace.yaml
